// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer custom font size 1`] = `
.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 12px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 span.margin-left {
  margin-left: 4px;
}

.c4 span.margin-right {
  margin-right: 4px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c2 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 helperContent"
    size={12}
  >
    <img
      alt=""
      className="c2 image"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="c3 text"
        size={12}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c4 link"
        disabled={false}
        fontWeight="600"
        size={12}
        type="#59636f"
      >
        <a
          href="#"
        >
          Get support
        </a>
      </div>
    </div>
  </div>
  <div
    className="c5 actionsContainer"
  />
</div>
`;

exports[`Storyshots Footer extended style 1`] = `
.c5 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c5 span.margin-left {
  margin-left: 4px;
}

.c5 span.margin-right {
  margin-right: 4px;
}

.c5 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 > a {
  color: inherit;
}

.c5:hover {
  color: #3498db;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c3 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c2 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .text {
  margin-bottom: 8px;
}

.c2 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c6 > * {
  margin-left: 16px;
}

.c1 {
  border-color: orangered;
}

.c1 .image {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c1 .text {
  text-shadow: 0 0 8px tomato;
}

.c1 .link {
  border: solid 1px deeppink;
}

<div
  className="c0 c1"
>
  <div
    className="c2 helperContent"
    size={16}
  >
    <img
      alt=""
      className="c3 image"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="c4 text"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c5 link"
        disabled={false}
        fontWeight="600"
        size={16}
        type="#59636f"
      >
        <span
          onClick={[Function]}
        >
          Get support
        </span>
      </div>
    </div>
  </div>
  <div
    className="c6 actionsContainer"
  />
</div>
`;

exports[`Storyshots Footer with one action 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 32px;
  min-width: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c6 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c6:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c6:focus {
  box-shadow: none;
}

.c6:hover .icon,
.c6:focus .icon {
  color: white;
}

.c6 > .icon {
  color: rgba(0,0,0,0.32);
}

.c6:hover,
.c6:focus {
  color: #3498db;
  border-color: #3498db;
}

.c6:hover > .icon,
.c6:focus > .icon {
  color: #3498db;
}

.c6:disabled,
.c6:disabled .icon,
.c6:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c6:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 span.margin-left {
  margin-left: 4px;
}

.c4 span.margin-right {
  margin-right: 4px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c2 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .text {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 helperContent"
    size={16}
  >
    <img
      alt=""
      className="c2 image"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="c3 text"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c4 link"
        disabled={false}
        fontWeight="600"
        size={16}
        type="#59636f"
      >
        <span
          onClick={[Function]}
        >
          Get support
        </span>
      </div>
    </div>
  </div>
  <div
    className="c5 actionsContainer"
  >
    <button
      className="c6"
      onClick={[Function]}
      size="SMALL"
      type="NEUTRAL"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Footer with two actions 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c6 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c6:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c6:focus {
  box-shadow: none;
}

.c6:hover .icon,
.c6:focus .icon {
  color: white;
}

.c6 > .icon {
  color: rgba(0,0,0,0.32);
}

.c6:hover,
.c6:focus {
  color: #3498db;
  border-color: #3498db;
}

.c6:hover > .icon,
.c6:focus > .icon {
  color: #3498db;
}

.c6:disabled,
.c6:disabled .icon,
.c6:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c6:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #fd6a08;
  padding: 0 16px;
}

.c7 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c7:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c7:focus {
  box-shadow: none;
}

.c7:hover .icon,
.c7:focus .icon {
  color: white;
}

.c7:hover {
  background-color: #E36009;
}

.c7:focus {
  background-color: #E36009;
}

.c7:disabled,
.c7:disabled .icon,
.c7:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c7:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 span.margin-left {
  margin-left: 4px;
}

.c4 span.margin-right {
  margin-right: 4px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c2 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .text {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 helperContent"
    size={16}
  >
    <img
      alt=""
      className="c2 image"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="c3 text"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c4 link"
        disabled={false}
        fontWeight="600"
        size={16}
        type="#59636f"
      >
        <span
          onClick={[Function]}
        >
          Get support
        </span>
      </div>
    </div>
  </div>
  <div
    className="c5 actionsContainer"
  >
    <button
      className="c6"
      onClick={[Function]}
      size="MEDIUM"
      type="NEUTRAL"
    >
      Cancel
    </button>
    <button
      className="c7"
      onClick={[Function]}
      size="MEDIUM"
      type="PRIMARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Footer without actions 1`] = `
.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 span.margin-left {
  margin-left: 4px;
}

.c4 span.margin-right {
  margin-right: 4px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c2 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .text {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 helperContent"
    size={16}
  >
    <img
      alt=""
      className="c2 image"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="c3 text"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c4 link"
        disabled={false}
        fontWeight="600"
        size={16}
        type="#59636f"
      >
        <a
          href="#"
        >
          Get support
        </a>
      </div>
    </div>
  </div>
  <div
    className="c5 actionsContainer"
  />
</div>
`;

exports[`Storyshots Footer without image 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 32px;
  min-width: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c5 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c5:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c5:focus {
  box-shadow: none;
}

.c5:hover .icon,
.c5:focus .icon {
  color: white;
}

.c5 > .icon {
  color: rgba(0,0,0,0.32);
}

.c5:hover,
.c5:focus {
  color: #3498db;
  border-color: #3498db;
}

.c5:hover > .icon,
.c5:focus > .icon {
  color: #3498db;
}

.c5:disabled,
.c5:disabled .icon,
.c5:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c5:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c3 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c3 span.margin-left {
  margin-left: 4px;
}

.c3 span.margin-right {
  margin-right: 4px;
}

.c3 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 > a {
  color: inherit;
}

.c3:hover {
  color: #3498db;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .text {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c4 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 helperContent"
    size={16}
  >
    <div>
      <div
        className="c2 text"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c3 link"
        disabled={false}
        fontWeight="600"
        size={16}
        type="#59636f"
      >
        <a
          href="#"
        >
          Get support
        </a>
      </div>
    </div>
  </div>
  <div
    className="c4 actionsContainer"
  >
    <button
      className="c5"
      onClick={[Function]}
      size="SMALL"
      type="NEUTRAL"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Footer without link 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 32px;
  min-width: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c5 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c5:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c5:focus {
  box-shadow: none;
}

.c5:hover .icon,
.c5:focus .icon {
  color: white;
}

.c5 > .icon {
  color: rgba(0,0,0,0.32);
}

.c5:hover,
.c5:focus {
  color: #3498db;
  border-color: #3498db;
}

.c5:hover > .icon,
.c5:focus > .icon {
  color: #3498db;
}

.c5:disabled,
.c5:disabled .icon,
.c5:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c5:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c2 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .text {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c4 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 helperContent"
    size={16}
  >
    <img
      alt=""
      className="c2 image"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="c3 text"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
    </div>
  </div>
  <div
    className="c4 actionsContainer"
  >
    <button
      className="c5"
      onClick={[Function]}
      size="SMALL"
      type="NEUTRAL"
    >
      Save
    </button>
  </div>
</div>
`;
